[package]
name = "fractional_cascading"
version = "0.3.0"
authors = ["Innokentiy Popov"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/kyon4ik/fractional_cascading"
license = "MIT License"
keywords = ["fractional_cascading", "search"]

[dependencies]
num-traits = "0.2"

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
criterion = "0.5"

[[test]]
name = "random_data"

[[bench]]
name = "search"
harness = false

